--- a/signup.html
+++ b/signup.html
@@ -42,8 +42,8 @@
   </body>
 </html>
 
-//Audience ID
+<!-- //Audience ID
 // 207b0a573c
 
 // Mailchimp API key
-// d3c8123c89ae707969121c21a224e5e8-us12
+// d3c8123c89ae707969121c21a224e5e8-us12 -->
